# film-companion

./: .gitignore  README.md  app.py  create_db.py  database-links.xml  database.db  films.json  package-lock.json  pyproject.toml  scraper-cameras.py  scraper.py  tailwind.config.js
static/: style.css
static/src/: input.css
templates/: 404.html  film-index.html  film.html  filter_buttons.html  index.html  layout.html  login.html  register.html  user.html
